# CroomsSchedCPP

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Sched_util.cpp  Sched_util.h  Schedule.cpp  Schedule.h  Settings.cpp  Settings.h  TextManager.cpp  TextManager.h  Text_util.cpp  Text_util.h  main.cpp
